Se agregaron estrellas en los divs

--- a/pagina huawei/index.html
+++ b/pagina huawei/index.html
@@ -89,12 +89,12 @@
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Special Item</h5>
                                     <!-- Product reviews-->
-                                    <div class="d-flex justify-content-center small text-warning mb-2">
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
+                                      <div class="d-flex justify-content-center small text-warning mb-2">
+                                        <div class="bi-star-fill" ><i class="zmdi zmdi-star"></i></div>
+                                        <div class="bi-star-fill"> <i class="zmdi zmdi-star"></i></div>
+                                        <div class="bi-star-fill"> <i class="zmdi zmdi-star"></i></div>
+                                        <div class="bi-star-fill"> <i class="zmdi zmdi-star"></i></div>
+                                        <div class="bi-star-fill"> <i class="zmdi zmdi-star"></i></div>
                                     </div>
                                     <!-- Product price-->
                                     <span class="text-muted text-decoration-line-through">$20.00</span>
@@ -140,7 +140,7 @@
                                     <h5 class="fw-bolder">Popular Item</h5>
                                     <!-- Product reviews-->
                                     <div class="d-flex justify-content-center small text-warning mb-2">
-                                        <div class="bi-star-fill" ><i class="zmdi zmdi-star"></i> <i class="zmdi zmdi-star"></i></div>
+                                        <div class="bi-star-fill" ><i class="zmdi zmdi-star"></i></div>
                                         <div class="bi-star-fill"> <i class="zmdi zmdi-star"></i></div>
                                         <div class="bi-star-fill"> <i class="zmdi zmdi-star"></i></div>
                                         <div class="bi-star-fill"> <i class="zmdi zmdi-star"></i></div>
@@ -209,12 +209,12 @@
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Special Item</h5>
                                     <!-- Product reviews-->
-                                    <div class="d-flex justify-content-center small text-warning mb-2">
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
+                                     <div class="d-flex justify-content-center small text-warning mb-2">
+                                        <div class="bi-star-fill" ><i class="zmdi zmdi-star"></i></div>
+                                        <div class="bi-star-fill"> <i class="zmdi zmdi-star"></i></div>
+                                        <div class="bi-star-fill"> <i class="zmdi zmdi-star"></i></div>
+                                        <div class="bi-star-fill"> <i class="zmdi zmdi-star"></i></div>
+                                        <div class="bi-star-fill"> <i class="zmdi zmdi-star"></i></div>
                                     </div>
                                     <!-- Product price-->
                                     <span class="text-muted text-decoration-line-through">$20.00</span>
@@ -237,12 +237,12 @@
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Popular Item</h5>
                                     <!-- Product reviews-->
-                                    <div class="d-flex justify-content-center small text-warning mb-2">
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
+                                     <div class="d-flex justify-content-center small text-warning mb-2">
+                                        <div class="bi-star-fill" ><i class="zmdi zmdi-star"></i></div>
+                                        <div class="bi-star-fill"> <i class="zmdi zmdi-star"></i></div>
+                                        <div class="bi-star-fill"> <i class="zmdi zmdi-star"></i></div>
+                                        <div class="bi-star-fill"> <i class="zmdi zmdi-star"></i></div>
+                                        <div class="bi-star-fill"> <i class="zmdi zmdi-star"></i></div>
                                     </div>
                                     <!-- Product price-->
                                     $40.00
