--- a/pagina huawei/index.html
+++ b/pagina huawei/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Tienda de compras</title>
+        <title>FERRETOR</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
@@ -18,7 +18,7 @@
     </head>
      <body id="page-top">
         <!-- Navigation-->
-       
+            
                 <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="#page-top">Nombre dela tiendan </a>
@@ -70,20 +70,20 @@
                     <div class="col mb-5">
                         <div class="card h-30">
                             <!-- Product    image-->
-                           <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
+                           <a class="portfolio-box" href="assets/img/portfolio/descarga.jpg" title="Bota industrial <br>$500.00">
+                            <img class="img-fluid" src="assets/img/portfolio/descarga.jpg" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Fancy Product</h5>
+                                    <h5 class="fw-bolder">Bota</h5>
                                     <!-- Product price-->
-                                    $40.00 - $80.00
+                                    $400.00 - $500.00
                                 </div>
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">comprar</a></div>
                             </div>
                         </div>
                     </div>
@@ -93,13 +93,13 @@
                             <div class="badge bg-dark text-white position-absolute" >Sale</div>
                             <!-- Product image-->
                             <div class="col-lg-12 col-sm-12">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
+                        <a class="portfolio-box" href="assets/img/portfolio/chalecos.jpg" title="Chaleco con reflector <br> $200.00">
+                            <img class="img-fluid" src="assets/img/portfolio/chaleco.jpg" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Special Item</h5>
+                                    <h5 class="fw-bolder">Chaleco con reflector </h5>
                                     <!-- Product reviews-->
                                       <div class="d-flex justify-content-center small text-warning mb-2">
                                         <div class="bi-star-fill" ><i class="zmdi zmdi-star"></i></div>
@@ -109,13 +109,13 @@
                                         <div class="bi-star-fill"> <i class="zmdi zmdi-star"></i></div>
                                     </div>
                                     <!-- Product price-->
-                                    <span class="text-muted text-decoration-line-through">$20.00</span>
-                                    $18.00
+                                    <span class="text-muted text-decoration-line-through">$250.00</span>
+                                    $200.00
                                 </div>
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a></div>
                             </div>
                         </div>
                     </div>
@@ -125,21 +125,21 @@
                             <div class="badge bg-dark text-white position-absolute" >Sale</div>
                             <!-- Product image-->
                             <div class="col-lg-12 col-sm-12">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/guantes.jpg" title="Guantes <br> $150">
+                            <img class="img-fluid" src="assets/img/portfolio/fullsize/guantes.jpg" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Sale Item</h5>
+                                    <h5 class="fw-bolder">Guantes</h5>
                                     <!-- Product price-->
-                                    <span class="text-muted text-decoration-line-through">$50.00</span>
-                                    $25.00
+                                    <span class="text-muted text-decoration-line-through">$200.00</span>
+                                    $150.00
                                 </div>
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a></div>
                             </div>
                         </div>
                     </div>
@@ -155,20 +155,20 @@
                     <div class="col mb-5">
                         <div class="card h-30">
                             <!-- Product    image-->
-                           <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
+                            <a class="portfolio-box" href="assets/img/portfolio/fullsize/casco.jpg" title="Casco industrial <br> $465.50">
+                            <img class="img-fluid" src="assets/img/portfolio/fullsize/casco.jpg" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Fancy Product</h5>
+                                    <h5 class="fw-bolder">Casco industrial</h5>
                                     <!-- Product price-->
-                                    $40.00 - $80.00
+                                    $500.00 - $465.50
                                 </div>
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Comprar</a></div>
                             </div>
                         </div>
                     </div>
@@ -177,14 +177,14 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" >Sale</div>
                             <!-- Product image-->
-                            <div class="col-lg-12 col-sm-12">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
+                            <div class="col-lg-14 col-sm-14">
+                       <a class="portfolio-box" href="assets/img/portfolio/fullsize/faja.jpg" title="Casco industrial <br> $465.50">
+                            <img class="img-fluid" src="assets/img/portfolio/fullsize/faja.jpg" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Special Item</h5>
+                                    <h5 class="fw-bolder">Faja industrial</h5>
                                     <!-- Product reviews-->
                                       <div class="d-flex justify-content-center small text-warning mb-2">
                                         <div class="bi-star-fill" ><i class="zmdi zmdi-star"></i></div>
@@ -194,8 +194,8 @@
                                         <div class="bi-star-fill"> <i class="zmdi zmdi-star"></i></div>
                                     </div>
                                     <!-- Product price-->
-                                    <span class="text-muted text-decoration-line-through">$20.00</span>
-                                    $18.00
+                                    <span class="text-muted text-decoration-line-through">$800.00</span>
+                                    $767.00
                                 </div>
                             </div>
                             <!-- Product actions-->
